--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "websocket",
+  "name": "websocket-demo",
   "version": "1.0.0",
   "description": "websocket learn",
   "private": true,
@@ -8,9 +8,9 @@
     "apps/*"
   ],
   "scripts": {
-    "start": "npm run start --workspaces",
-    "start:web": "npm start --workspace=ws-client",
-    "start:server": "npm start --workspace=ws-server"
+    "dev": "npm run start --workspaces",
+    "dev:web": "npm start --workspace=ws-client",
+    "dev:server": "npm start --workspace=ws-server"
   },
   "keywords": [
     "websocket"
