--- a/packages/ws-server/package.json
+++ b/packages/ws-server/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "private": true,
   "type": "module",
+  "main": "./dist/index.js",
+  "types": "./types/index.d.ts",
   "scripts": {
-    "start": "node index.js"
+    "build": "tsc",
+    "dev": "npx nodemon"
   },
   "keywords": [],
   "author": "",
@@ -13,5 +16,11 @@
   "dependencies": {
     "shared": "^1.0.0",
     "ws": "^8.18.2"
+  },
+  "devDependencies": {
+    "@types/node": "^24.0.0",
+    "@types/ws": "^8.18.1",
+    "nodemon": "^3.1.10",
+    "tsx": "^4.19.2"
   }
 }
